Change skills' section line-height to avoid overlapping content

--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,7 @@ body {
 
 .skills__content {
   width: 75%;
+  line-height: 32px;
   position: relative;
   top: 50%;
   left: 50%;
