--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -1,6 +1,7 @@
 .skills {
     &__content {
         width: 75%;
+        line-height: 32px;
         @include centerElement;
     }
 
